--- a/components/backend-tests-go-cabxbbqa/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-cabxbbqa/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-cabxbbqa
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-tssc/task-runner:1.8
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-cabxbbqa:4e187df8b78751d8510a8061a5bfcfa99ee57b70@sha256:6048ea3185b0752527e70834c34422c3c10ac9c6bb90b96d8c19dd3287640a06
+          name: container-image
